@@ -1,8 +1,8 @@
 Package: fscaret
 Type: Package
 Title: Automated caret feature selection
-Version: 0.8.6.2
-Date: 2014-09-29
+Version: 0.8.6.3
+Date: 2014-10-5
 Depends: R (>= 3.0.0), caret, gsubfn, utils, parallel
 Suggests: ada, arm, Boruta, bst, C50, car, caTools, class, Cubist,
         e1071, earth (>= 2.2-3), elasticnet, ellipse, evtree,
@@ -23,7 +23,7 @@ Maintainer: Jakub Szlek <j.szlek@uj.edu.pl>
 License: GPL-2 | GPL-3
 Description: Automated feature selection using variety of models
         provided by caret package
-Packaged: 2014-09-29 07:50:14 UTC; kuba
+Packaged: 2014-10-06 10:33:49 UTC; kuba
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-09-29 15:19:03
+Date/Publication: 2014-10-06 13:48:52
