@@ -1,16 +1,16 @@
-805d508364fc6fb109edda7dab87e17d *DESCRIPTION
+b5732fea97ddb0aa65fae94deb7b5e6f *DESCRIPTION
 e6365daf27c1ca791af3637189af5104 *NAMESPACE
 6a4372bcb4b3d0e283b6bfd07feaac0b *R/MSE.R
 fad361e51e4e126ae1bd160e26be1003 *R/RMSE.R
 eaead0d506b494cbb0e6e114e86e5bf8 *R/classVarImp.R
-bf25b73d80971e0dfd6f4b075e896f99 *R/dataPreprocess.R
-d818acd9e7b4044ba56f0a430132c3e8 *R/fscaret.R
+63a6644ac64c6cbb8b3e5f7ce1267d1d *R/dataPreprocess.R
+9cf5be2dadcab11534e344474b8aba81 *R/fscaret.R
 2d6fe3925f5924156cb83de3b51d9a3f *R/funcClass.all.R
 23eacac586077390832615001ccdd3a6 *R/funcReg.all.R
-6ef4f573e217238f58879693564edef2 *R/impCalc.R
+1efaf8dddce9d7a30a0d8f923b79b718 *R/impCalc.R
 2afa4ec13630ff492d5f6456f744b3c9 *R/imputeMean.R
 e83d0af82349f78dc4436942258eba0b *R/installPckg.R
-212f94c59158cc3d9589bd9f4d3d67ec *R/regVarImp.R
+794e8b20e64ea9e60823ecc233bca62f *R/regVarImp.R
 75bb37c88645180e6c78729e53cc297f *R/requiredPackages.R
 74838300c0e161348e60854d9f1afc2a *R/timeout.R
 c2b008a1cd301fb747be3cad627b74cf *build/vignette.rds
@@ -20,21 +20,21 @@ abdecf7d69b6380eae76db7184de1cfc *data/funcClassPred.RData
 42347ce30f2d84cbacd9f5a8f084d59a *data/funcRegPred.RData
 73a4360a6e7a310dbf1ce90986f2e876 *data/requiredPackages.RData
 a92882a9483305d31da69c7e87077972 *inst/CITATION
-c5cb8ed857e5abd1eea8868ef26fc06f *inst/NEWS.Rd
+1c63936095a2d8b1942bcf55594a8f6c *inst/NEWS.Rd
 cfc08613410d488da748cdf7e627e2a8 *inst/doc/fscaret.R
 e42425055f5c0df53fa3a5fc9eaa3a54 *inst/doc/fscaret.Rnw
-e7f9b6f1428e099b3f2ba9f8558f7f87 *inst/doc/fscaret.pdf
+222de042905d724fe6452b4607374feb *inst/doc/fscaret.pdf
 f760f432af5b2aaa5902ef8e11659ca1 *man/MSE.Rd
 d768fe4bd6b787ec63f0b137c4e31d80 *man/RMSE.Rd
 c367713655006540b54bd632766bcf79 *man/classVarImp.Rd
-b98457a3d4e331f2ba13bc32e6d6247d *man/dataPreprocess.Rd
+ed5d18925a1e3ca5aea763131aa5a30b *man/dataPreprocess.Rd
 76d760fcbe688794d3e390bbcfe1954a *man/dataset.test.Rd
 3e07c5e6343bfeeb699f163646b784f6 *man/dataset.train.Rd
-3a2075a65f3b8731c17e0e63f5a75367 *man/fscaret-package.Rd
-2bd41db56148b9b7a00fa90b4c3fae42 *man/fscaret.Rd
+0efbbf6d3e34ce90b14ba60ce704537b *man/fscaret-package.Rd
+6a34db6e082e07a95a0aaecabb081d11 *man/fscaret.Rd
 b31402f56ac0528f15e66d036c152008 *man/funcClass.all.Rd
 e19c6b333eb5c191325efedb287b4cfa *man/funcReg.all.Rd
-58f5ab1f45a2e43c3e543e2395072bf2 *man/impCalc.Rd
+e094f213de1e62cf8217238339b1e8aa *man/impCalc.Rd
 5dbf4ece4a03ac37f891cf56684be8d1 *man/imputeMean.Rd
 3ef75a5d12c1a84c1eb450da41232998 *man/installPckg.Rd
 f03410cf2f3cf9b56a50c7dbea4439ab *man/regVarImp.Rd
